Add Google Analytics ID. Add global license to the footer template.

--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -7,5 +7,8 @@
       &copy; <%= date(new Date(), 'YYYY') %> <%= config.author || config.title %>&nbsp;
       Powered by <a href="http://hexo.io/" target="_blank">Hexo</a>, theme by <a href="http://github.com/ppoffice">PPOffice</a>
     </div>
+    <div id="footer-info" class="inner" style="margin-top: 10px;">
+      <%- globalLicense(config) %>
+    </div>
   </div>
 </footer>
