Add additional favicon sizes to the theme head element.

--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -26,7 +26,9 @@
     <link rel="alternative" href="<%- theme.rss %>" title="<%= config.title %>" type="application/atom+xml">
   <% } %>
   <% if (theme.favicon){ %>
-    <link rel="icon" href="<%- theme.favicon %>">
+    <link rel="icon" type="image/png" href="<%- theme.favicon %>-16x16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="<%- theme.favicon %>-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="<%- theme.favicon %>-96x96.png" sizes="96x96">
   <% } %>
   <link href="<%- url_for(config.root + 'webfonts/ptserif/main.css') %>" rel='stylesheet' type='text/css'>
   <link href="<%- url_for(config.root + 'webfonts/source-code-pro/main.css') %>" rel="stylesheet" type="text/css">
